<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/tinyPadding"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/smallPadding">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:padding="@dimen/tinyPadding"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normalSize" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivRatePanel"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/json_rate_app" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdateDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:padding="@dimen/tinyPadding"
            android:text="@string/rate_app_msg"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/extraMediumSize" />

        <LinearLayout
            android:id="@+id/rlRateButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="@dimen/smallPadding"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlRateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="@dimen/microPadding"
                android:paddingVertical="@dimen/tinyPadding">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRateNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/mediumPadding"
                    android:paddingEnd="@dimen/mediumPadding"
                    android:text="@string/rate_now"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalSize"
                    app:fontFamily="@font/semibold" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:padding="@dimen/tinyPadding"
                android:text="@string/not_now"
                android:textSize="@dimen/normalSize"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>